assets/dananke/scss/base.scss
/* ... */
.main-title {
    font-size: 3rem;
    margin-bottom: .25rem;
    margin-top: 1.5rem;

    @include chooseFontFamily("font-family", "athelas");
}

.main-article-title {
    font-size: 2rem;
}

.main-article-tags, .main-article-see-also {
    flex: 1 1 100%;
    margin-top: .875rem;
}

.main-article-timeinfo {
    margin-top: 2rem;
}

.main-article-timeinfo ~ .main-article-content h2 {
    margin-top: .5rem;
}

.main-article-timeinfo ~ .main-article-toc {
    margin-top: 1rem;
}

.contact-form-article .main-article-content {
    width: fit-content;
}

.article-author {
    align-self: baseline;
    font-size: 1.2rem;
    letter-spacing: .1em;
    line-height: 1;
    margin-right: .4em;
}

.no-article-author .article-author {
    display: none;
}

.no-article-socials-share .socials-share {
    display: none;
}

.no-article-header .main-header {
    display: none;
}

.article-timeinfo {
    font-size: 12pt;
    letter-spacing: .1rem;
    line-height: 1;
}

.main-block .articles-summaries {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    padding-bottom: 0;
    padding-left: 1rem;
    padding-right: 1rem;
    padding-top: 0;
    width: 100%;

    @include center-block;
}

.main-block .terms-list {
    font-size: 1.4rem;
    list-style: none;
    padding-bottom: 0;
    padding-left: 1rem;
    padding-right: 1rem;
    padding-top: 0;
    width: 100%;

    @include center-block;
}

.main-block .terms-taxonomies-aside {
    background-color: #f7f7f7;
    border-radius: 1em;
    color:rgba(0, 0, 0, .65);
    font-size: 1.4rem;
    font-style: italic;
    font-weight: lighter;
    line-height: 1.5;
    margin-left: auto;
    margin-right: 2rem;
    padding-bottom: 0;
    padding-left: 2rem;
    padding-right: 2rem;
    padding-top: .1rem;
    width: fit-content;
}

.terms-taxonomies-list {
    list-style: none;
    margin-top: 0;
    opacity: .7;
    margin-top: 0;
    padding-bottom: .5rem;
    padding-left: 0;
    padding-right: 1rem;
    padding-top: 0;
    width: 100%;
}

.terms-taxonomies-title {
    font-size: 1.5rem;
    margin-left: 0;
    padding-left: 0;
}

.terms-title {
    margin-top: 0;
    text-align: center;
}

.terms-link {
    white-space: normal;
}

.main-block .main-article-content.terms-list {
    @include chooseFontFamily("font-family", "avenir");
}

.sitemap-list-block {
    font-size: 1.4rem;
    line-height: 1.2;
    text-align: left;
}

.terms-item a {
    text-decoration: none;
}

.main-block .articles-summaries .featured-title {
    font-size: 3rem;
    margin-bottom: 0;
    margin-top: 0;
    padding-bottom: 1rem;
    text-align: center;
}

.main-block .articles-summaries > .article-summary:first-of-type {
    border-top: solid 1px rgba(0, 0, 0, .3)
}

.article-summary {
    align-items: center;
    border-bottom: solid 1px rgba(0, 0, 0, .3);
    color: #333;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-bottom: .5em;
    padding-bottom: 1.5rem;
    padding-left: .5rem;
    padding-right: .5rem;
    padding-top: 1.5rem;
    position: relative;
    text-decoration: none;
    width: 100%;

    @include center-block;
}

.article-summary:last-of-type {
    border-bottom: none;
    margin-bottom: 0;
    padding-bottom: 0;
}

.article-summary .summary-link {
    display: block;
    margin-bottom: 1rem;
    order: 2;
    width: 100%;
}

.article-summary .summary-contents {
    margin-bottom: 1rem;
    order: 1;
    width: 100%;
}

.summary-image {
    border-style: none;
    display: block;
    height: auto;
    margin-left: auto;
    max-width: 100%;
    width: auto;
}

.summary-contents {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
}

.summary-title {
    background-color: #ccc;
    border: solid 1px gray;
    border-radius: .25rem;
    display: block;
    color: inherit;
    font-size: 1.5rem;
    font-weight: 100;
    line-height: 1.25;
    margin-top: 0;
    max-width: 36rem;
    opacity: 1;
    padding-left: .25rem;
    padding-right: .25rem;
    text-align: left;

    @include chooseFontFamily("font-family", "athelas");
}

.summary-title:focus, .summary-title:hover {
    opacity: .7;
}

.summary-title-link {
    color: inherit;
    display: block;
    text-decoration: none;
}

.page-title-banner {
    color: var(--title-over-image-colour, rgba(255, 255, 255, .8));
    font-size: 2.25rem;
    font-weight: 400;
    line-height: 1.25;
    margin-bottom: 0;
    padding-bottom: .5em;
    width: 100%;
}

.page-description-banner {
    color: var(--title-over-image-colour, rgba(255, 255, 255, .8));
    font-size: 1.25rem;
    margin-bottom: 0;
    margin-top: 0;
    padding-bottom: 2rem;
    width: 100%;

    @include center-block;
}

.homepage-description-banner {
    font-size: 1.5rem;
    margin-bottom: 1rem;
    padding-bottom: .5rem;
}

.site-header {
    background-color: var(--featured-image-padding-colour);
    display: block;
    padding-left: 1rem;
    padding-right: 1rem;
    position: relative;
    text-align: center;
    z-index: 0;
}

.site-header .page-title-banner {
    font-size: 1.5rem;
    position: relative;
    z-index: 2;
}

.site-header .page-description-banner {
    font-size: 12pt;
    position: relative;
    z-index: 2;
}

.site-header-with-image {
    height: auto;
    min-height: auto;
}

.main-nav-details + .main-navigation.show-on-mobile ~ .site-header {
    height: 2em;
    width: 100%;
}

.main-nav-details[open] + .main-navigation.show-on-mobile ~ .site-header {
    height: auto;
    min-height: auto;
    position: relative;
    z-index: 3;
}

.featured-image-link {
    bottom: 0;
    align-items: center;
    align-content: center;
    display: none;
    flex-flow: column nowrap;
    justify-content: center;
    left: 0;
    max-height: 100%;
    position: absolute;
    right: 0;
    top: 0;
    z-index: 0;
}

.main-nav-details[open] ~ .site-header .featured-image-link {
    display: flex;
}
/* ... */

